# ChangeLog for net-dns/rbldnsd
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-dns/rbldnsd/ChangeLog,v 1.22 2013/06/02 10:59:34 pacho Exp $

  02 Jun 2013; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Cleanup due bug #328951

  17 Mar 2013; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
  Add proxy-maintainers to metadata.xml

  09 Oct 2012;  <naota@gentoo.org> rbldnsd-0.996b.ebuild:
  Add ~x86-fbsd. #237130

  14 Jun 2012; Zac Medico <zmedico@gentoo.org> rbldnsd-0.996b.ebuild:
  inherit user for enewgroup and enewuser

  04 Apr 2011; Dane Smith <c1pher@gentoo.org> metadata.xml:
  Update metadata to reflect Michael Orlitzky as maintainer w/ me as his
  proxy
  committer.

  14 Jan 2010; Jeroen Roovers <jer@gentoo.org> rbldnsd-0.996b.ebuild:
  Stable for HPPA (bug #282366).

  06 Sep 2009; Markus Meier <maekke@gentoo.org> rbldnsd-0.996b.ebuild:
  amd64/x86 stable, bug #282366

  15 May 2009; Mark Loeser <halcy0n@gentoo.org> rbldnsd-0.996b.ebuild:
  Fix elog statement for bug #260789

  04 Jan 2009; Christoph Mende <angelos@gentoo.org>
  +files/rbldnsd-0.996b-asneeded.patch, -rbldnsd-0.996a.ebuild,
  rbldnsd-0.996b.ebuild:
  QA: Fixed compilation with --as-needed (bug 247960), respect CC, die on
  dosbin

  29 Jun 2008; Torsten Veller <tove@gentoo.org> rbldnsd-0.996a.ebuild,
  rbldnsd-0.996b.ebuild:
  Add missing die: || "..." -> || die "..."

  27 May 2008; Jeroen Roovers <jer@gentoo.org> rbldnsd-0.996b.ebuild:
  Marked ~hppa too.

*rbldnsd-0.996b (27 May 2008)

  27 May 2008; Jeroen Roovers <jer@gentoo.org> +rbldnsd-0.996b.ebuild:
  Version bump (bug #223789).

*rbldnsd-0.996a (28 Dec 2007)

  28 Dec 2007; Raúl Porcel <armin76@gentoo.org> -rbldnsd-0.995.ebuild,
  -rbldnsd-0.996.ebuild, +rbldnsd-0.996a.ebuild:
  Version bump wrt #145180, cleanup

  17 Oct 2007; Chris Gianelloni <wolf31o2@gentoo.org> rbldnsd-0.996.ebuild:
  Marking ~amd64 wrt bug #194160.
