@@ -2,17 +2,21 @@
 Hash: SHA256
 
 AUX confd 635 SHA256 24ec9e68e2f19e27048b37f5cb502e096de5757bb733807dfddac41ecc304eba SHA512 33208edcce5b91f64fa7b60d3fe6798e97464d839ecf2af4af081080706f623ce9bc16ef62a796e0d1e64e726194974d95868723121e1daa208a9df5e6a53a34 WHIRLPOOL b7f73521c3b76a6d4f4271cbd099296086a61b30b11fc43a14115b2cb9c4c6a2e6414cf604dd4dfaa5936016a78528bfb79e529c18fcdaa332e424ccd2ad7f8a
+AUX confd-0.997 994 SHA256 bf4459b36f9caa59c6b4a39514e1590e81bec21328c2af88a71a85041349eefd SHA512 c11b2a6e2784c691f593bcfd2c0ac0f2559eff7970d200fad4f8560c9a13db0840380d83403d6e779fd5f0a126cdbe8676bba8352a10b13f60660f7602cba01b WHIRLPOOL f50d39a2941fea98e19b1abdf24ff888e63ac007df42770918f31d49c2900f0c101f85ec7645d7dd60e7a7f469ac1e8b83bf60e92afa6d3a5db41641e49d930c
 AUX example 495 SHA256 716411e82cbfdcf93278f1b66578329ca5f7f91d2dcda51959fd047f1c0454b8 SHA512 114b1eefea2017802291113951e5d9d0288a4c862b4ec7163b01b190aaac1b9748e7454b038320409ecc3975f76b7584c791507ec53c91fe86a61261d918b25c WHIRLPOOL 8b926cb970a5cebadff2e4d551ebe58b452be3e3f482a4c8590c4acbd3158fe7b69b537eaefa61dae9a3a2f9f5384fd1e99ec9a7895f2b9e465e7449c68223b1
 AUX initd 475 SHA256 e1002cc31ba33061916cfe6caf26ed12b5cca6dd77149ad07304642db9218a62 SHA512 afd0e51f1c189d0e234fd15b617a4374fe858608cf1314230ffc24cac69313e771bb295aaadf37f8e18389a8874dc6c491a35d505d8a30b0c04a863621640384 WHIRLPOOL 971b09cf2dfe685a509f1155101c0eaeea8a55e92d16aebda509604fc9feb42ce2899aaa05a1622568f9dc8e6efd663f828d4e95b9b71d63a0155bbeaa9322f2
+AUX initd-0.997 653 SHA256 78b37dbe49cfe4f981e9cce8898cadd06a1586bfb37dce8176bf811bd4948fc8 SHA512 2e40329682c59741bf11abe798dc9524368a625d0ac593f8c4f57979e403a96e08ac245fec350f9f9ecd45d2f6b7f01b1df2c8b6195df98ebfe3e52889e4b26c WHIRLPOOL 8f4d881ff15ac232ec3674edeb3716e07926cf79888822ac5b56c19ee40640a005fcbc6ec3661b87a5fef194e09bd124aaab61a1628d0d0a2df16d78a4a97ea8
 AUX rbldnsd-0.996b-asneeded.patch 305 SHA256 7eb48018e8d4a2784d3766a48a1ad88a3771ab161f90aa96d62f4b154a170817 SHA512 d5acb0e893469967eae6251e5d0698b89cda3e1753f6b7fb06f9c2e22e2df8fd952b682dfd8a4444db2907a4a62367cd4a706629acca015507163fff8bc518af WHIRLPOOL ae906c72875b08d0605df0fb652fa8dcf48fa3964eb01afb7651020da312215ebcadf055fc6a1db6d157b7905bce495fb8745cc2915a84f9b091b73d412067e0
+DIST rbldnsd-0.997.tar.gz 148762 SHA256 c61fc0d9b6efb2cc823e47c4e3bce44a0fbd3e1ca7377dccdc22618bc1c22368 SHA512 d9aff718e77907c1eb800a12493ad211e3130ef2ad1770a2f1e2292e96ea9d815ee687f7445e656b0f0201c4f8707426bd0230d9bd3efef4e2f611262fc5ea84 WHIRLPOOL 4157197309836fca4f4eb7ce45a0fe103e4cd4666258233b0ea2ed24deab26048325b16ba72d9cdbbac39b513c7957b152bd4a0e564f2d7cec594098d701bf6c
 DIST rbldnsd_0.996b.tar.gz 113128 SHA256 475afe5be8729a76b7c23e2f3d5ce1c773775140406a58bfb7477fac5a528342
 EBUILD rbldnsd-0.996b.ebuild 1327 SHA256 ee522dc4b3a6cbc22749f4cf3fd1effc5d8c64447a1d40aa4cf39e969d3b54cd SHA512 a3b0d9ac1c0eb773c820af7a5289184329d6cf1f162395bb1442170251e1ac27c14ac214818fc750ddbfc58c527b0fa7175f282bdc6b07493bde8ed0e3fa21d4 WHIRLPOOL 266e696f3ed2d53d46d8fcca7dca4e49a57e8e6f19f1120fbe7827dfba40a7dfdefd0ae4cd8882e5827b45e79b3ad68465703b69dda20af0509ff5b0ca550a53
-MISC ChangeLog 3086 SHA256 c1bcaa88719258dd9cd7c86d2847feda7dbb6d904c1ed6fe5608aca6747c6aca SHA512 072ad68984dca2bbc95d32c788c91f73cada4785553079efebccefa4b69c577815aca2e79016a4dec338cb9250c4ec496a44c6a641eb705223bdeeb6cbd6a2a6 WHIRLPOOL ac8da3554be2d9c7dfda9063f08817290f666249f913aa6fbe1b74eff6bf80bf929eef54794ec488b6746f4a79f59b6752f10518b95b022f44a0f3f6444232dc
+EBUILD rbldnsd-0.997.ebuild 1481 SHA256 255bf35560dc8bdb1ff22bc770656f1189771ee00b63e8529621953046903970 SHA512 daf6ffdd2272f28d4d5a6202b8070539d538c33e372b144e0ff728365d2c3ef1f9ff4c1b48766b37a9a5ac962d9b5fbbae2cbc0bf05710ebd6fde188c92cbdcb WHIRLPOOL 0fb4ec9f03f0b13a68d1803708582f753c7d7c4fb0a171cabdc4f1cef4a9c916cc3b2803c1cf2720ff6c64a42b0592c17c9a26f3b8757bb3e223ccde0a7bca60
+MISC ChangeLog 3275 SHA256 3fd72107d08f97dd157474fa72464a5807f18359414255caab959412a5aebac6 SHA512 35deabd1abb926eb2f84a7a40a6dc7b0c4317986a8e04d99268e1e3888f7df665d1512f34cf12aaec4d2b349822afa0c22d1bfb243a9bf1efcebf8eddfd6724c WHIRLPOOL adb438772c8f962f30aadda675371f9f269f8ca4f54d4f0040b3d5f487ee2f53cc31a6ffee2e36a944528e5bf1cbfb5c4a7fd314340ff4507cbf3c74d61b8c3e
 MISC metadata.xml 1179 SHA256 6a9d5a1772e174859bf13dbe53a955671ad97eeb8322dd6ff9772046460e017d SHA512 d2f2925bd8de92dc0d9dffce03b0ce8a61c28a0abbbdc3ca21ca10ac3f22a773dcbf19e880563e0557a1512fe3e0586f3b4ef5abd0b6add8278e6b24ea709051 WHIRLPOOL 42f38dbd07679c6e1ceb9d3b054928e5a0f3befdb8d4f5e74b3b23a486bb98066bc7a44e2dab05ef39465f44e41ad815a0cc3f7a32add5bff84c78a484a986c6
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlGrJZcACgkQCaWpQKGI+9ROiACcDYO8pSOLvraiGVGwrZ1i+C6+
-EYYAn3bcfmRx6K2d26KO1k42noB7fzrz
-=8hDV
+iF4EAREIAAYFAlHa8icACgkQknrdDGLu8JAcVwD+NNsVQUI+/oRb3soz55WhKjFq
+O45afVumhB20Lb4K1KsA/iWD6OXacmdn5kMIouiGMc+IODhjoGUsg7PzpZq8asAo
+=46gy
 -----END PGP SIGNATURE-----
