@@ -1,6 +1,12 @@
 # ChangeLog for net-dns/rbldnsd
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/rbldnsd/ChangeLog,v 1.22 2013/06/02 10:59:34 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/rbldnsd/ChangeLog,v 1.23 2013/07/08 17:08:53 xmw Exp $
+
+*rbldnsd-0.997 (08 Jul 2013)
+
+  08 Jul 2013; Michael Weber <xmw@gentoo.org> +files/confd-0.997,
+  +files/initd-0.997, +rbldnsd-0.997.ebuild:
+  Version bump by Michael Orlitzky (bug 475348).
 
   02 Jun 2013; Pacho Ramos <pacho@gentoo.org> metadata.xml:
   Cleanup due bug #328951
